# Communication_through_structured_messages

./: README.md  core_schema.json  kernel_message_engine.py  package-lock.json  readme.md
back-end/: README_extended_shemes.md  kernel_message_engine.py  main.py  reservation_schema.json  storage.sqlite3  test_valid_data.py
back-end/storage/: 28b1bc14-086c-4ff1-8050-c3ad2e6a2cd3.json  3cc81e44-d0b2-4a3e-9a54-ceec8468b3ef.json  (+2 more)
extended_schemes/: reservation_schema.json  tests_extended_schemes.py  valid_data.json
front-end/: index.html  package-lock.json  readme.md  tsconfig.app.json
front-end/src/: App.tsx
front/messaging-app/: MANIFEST.in  README.rst  development.ini  pyproject.toml  setup.cfg  test.ini
front/messaging-app/messaging_app/: __init__.py
front/messaging-app/messaging_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
front/messaging-app/messaging_app/config/: app_cfg.py  application.py
front/messaging-app/messaging_app/controllers/: __init__.py  controller.py.template  error.py  root.py  secure.py
front/messaging-app/messaging_app/lib/: helpers.py
front/messaging-app/messaging_app/model/: __init__.py  auth.py  model.py.template
front/messaging-app/messaging_app/tests/: __init__.py
front/messaging-app/messaging_app/tests/functional/: test_authentication.py  test_root.py
front/messaging-app/messaging_app/tests/models/: __init__.py  test_auth.py
front/messaging-app/messaging_app/websetup/: __init__.py  bootstrap.py  schema.py
front/messaging-app/migration/: env.py
project 2/: index.html
(+17 files in other folders)
