# Quickstarted Options:
#
# sqlalchemy: True
# auth:       sqlalchemy
# mako:       False

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "messaging-app"
version = "0.1"
description = ""
authors = [
  { name = "Uknown", email = "unknown@email.com" }
]
urls = { Homepage = "http://unknown.org" }
readme = { file = "README.rst", content-type = "text/x-rst" }
dependencies = [
  "TurboGears2 >= 2.5.0",
  "Beaker >= 1.8.0",
  "Kajiki >= 0.6.3",
  "zope.sqlalchemy >= 1.2",
  "sqlalchemy < 3.0",
  "alembic",
  "repoze.who",
  "WebHelpers2",
  "Babel > 2.12",
]

[project.optional-dependencies]
testing = [
  "WebTest >= 1.2.3",
  "pytest",
  "coverage",
  "gearbox"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = []

[tool.setuptools.package-data]
messaging_app = [
  "i18n/*/LC_MESSAGES/*.mo",
  "templates/*/*",
  "public/*/*"
]

[tool.babel]
domain = "messaging_app"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"

[[tool.babel.mappings]]
method = "ignore"
pattern = "public/**"
[[tool.babel.mappings]]
method = "kajiki"
pattern = "templates/**.xhtml"

[tool.babel.mappings.options]
strip_text = false
extract_python = true

[project.entry-points."paste.app_factory"]
main = "messaging_app.config.application:make_app"

[project.entry-points."gearbox.plugins"]
turbogears-devtools = "tg.devtools"
